# patronaje

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
docs/: a_medida.md  aama_astm.md  arquitectura.md  blazer.md  casado_piquetes.md  falda.md  formulas.md  grading.md  manipulacion_bloque.md  metodo_aldrich.md  metodo_bunka.md  metodo_esmod.md  metodo_mueller.md  motor_metodos.md  pantalon.md  pinzas_equilibrio.md  techpack_corte.md  vestido.md  visor_3d.md  visor_vivo.md
output/: camisa_S.ai  camisa_S.dxf  camisa_S.json  camisa_S.scr  camisa_S_AAMA_ASTM.dxf  camisa_S_armstrong.ai  camisa_S_armstrong.dxf  camisa_S_armstrong.json  camisa_S_armstrong.scr  camisa_S_armstrong_AAMA_ASTM.dxf  camisa_S_armstrong_puntos.csv  camisa_S_armstrong_tech_pack.html  camisa_S_back_pleat.ai  camisa_S_back_pleat.dxf  camisa_S_back_pleat.json  camisa_S_back_pleat.scr  camisa_S_back_pleat_AAMA_ASTM.dxf  camisa_S_back_pleat_puntos.csv  camisa_S_back_pleat_tech_pack.html  camisa_S_base_french.ai  camisa_S_base_french.dxf  camisa_S_base_french.json  camisa_S_base_french.scr  camisa_S_base_french_AAMA_ASTM.dxf  camisa_S_base_french_puntos.csv  camisa_S_base_shoulder.ai  camisa_S_base_shoulder.dxf  camisa_S_base_shoulder.json  camisa_S_base_shoulder.scr  camisa_S_base_shoulder_AAMA_ASTM.dxf  camisa_S_base_shoulder_puntos.csv  camisa_S_base_side.ai  camisa_S_base_side.dxf  camisa_S_base_side.json  camisa_S_base_side.scr  camisa_S_base_side_AAMA_ASTM.dxf  camisa_S_base_side_princess.ai  camisa_S_base_side_princess.dxf  camisa_S_base_side_princess.json  (+196 more)
(+121 files in other folders)
