[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patronaje"
version = "0.1.0"
description = "Sistema de patronaje industrial paramétrico (Aldrich) con exportación CAD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "ezdxf>=1.1",
    "shapely>=2.0",
    "reportlab>=4.0",
    "svgwrite>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
patronaje = "patronaje.cli:main"

[tool.setuptools.packages.find]
include = ["patronaje*"]

[tool.setuptools.package-data]
patronaje = ["assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
